Base models and updated vectorizer

--- a/NLP_Techniques.ipynb
+++ b/NLP_Techniques.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "        emily = \"/Users/emilywang/Desktop/DS3500-Final-Project-main-2\"\n",
     "        kelly = \"/Users/kelly/Desktop/ds3500/DS3500-Final-Project\"\n",
     "        qi = \"\"\n",
-    "        self.path = emily + \"/transcripts/\"+ticker+\"_transcripts/\"\n",
+    "        self.path = xinyu + \"/transcripts/\"+ticker+\"_transcripts/\"\n",
     "\n",
     "    def read_files(self):\n",
     "        return [f for f in listdir(self.path) if isfile(join(self.path, f))]\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -81,29 +81,14 @@
      "output_type": "stream",
      "text": [
       "Warning: attempted to access market during weekend or after hours\n",
-      "                          Earnings Transcript /Users/emilywang/Desktop/DS3500-Final-Project-main-2/transcripts/AAPL_transcripts/20161025_Apple_Inc-_Earnings_Call_2016-10-25_FS000000002309526178.pdf Not Added\n",
+      "                          Earnings Transcript /Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project/transcripts/AAPL_transcripts/20161025_Apple_Inc-_Earnings_Call_2016-10-25_FS000000002309526178.pdf Not Added\n",
       "                          \n",
       "Warning: attempted to access market during weekend or after hours\n",
-      "                          Earnings Transcript /Users/emilywang/Desktop/DS3500-Final-Project-main-2/transcripts/AAPL_transcripts/20161025_Apple_Inc-_Earnings_Call_2016-10-25_FS000000002309526172.pdf Not Added\n",
+      "                          Earnings Transcript /Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project/transcripts/AAPL_transcripts/20161025_Apple_Inc-_Earnings_Call_2016-10-25_FS000000002309526172.pdf Not Added\n",
       "                          \n",
       "AAPL transcripts stored successfully\n",
-      "FB transcripts stored successfully\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub data rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_data_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
-      "NotebookApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
+      "FB transcripts stored successfully\n",
+      "MSFT transcripts stored successfully\n"
      ]
     }
    ],
@@ -139,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +791,7 @@
        "[85 rows x 11 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,6 +832,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction accuracy on the test data: 63.64%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import LinearSVC\n",
+    "\n",
+    "features = pca_df.drop(\"target\", axis = 1)\n",
+    "target = pca_df[\"target\"]\n",
+    "\n",
+    "#split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, target, random_state=3000)\n",
+    "\n",
+    "#initialize classifier\n",
+    "clf = LinearSVC(random_state=3000, max_iter=1000000)\n",
+    "\n",
+    "#create the model by fitting the training data\n",
+    "clf.fit(X=X_train, y=y_train)\n",
+    "\n",
+    "#prediction accuracy\n",
+    "accuracy = clf.score(X_test, y_test)\n",
+    "\n",
+    "print(\"Prediction accuracy on the test data:\", f\"{accuracy:.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction accuracy on the test data: 68.18%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "#split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, target, random_state=3000)\n",
+    "\n",
+    "#initialize classifier\n",
+    "log = LogisticRegression(random_state=3000)\n",
+    "\n",
+    "#create the model by fitting the training data\n",
+    "log.fit(X=X_train, y=y_train)\n",
+    "\n",
+    "#prediction accuracy\n",
+    "accuracy = log.score(X_test, y_test)\n",
+    "\n",
+    "print(\"Prediction accuracy on the test data:\", f\"{accuracy:.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -869,7 +920,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
