Final presentation jupyter notebook

--- a/NLP_Techniques_Models.ipynb
+++ b/NLP_Techniques_Models.ipynb
@@ -26,7 +26,7 @@
     "        emily = \"/Users/emilywang/Desktop/DS3500-Final-Project-main-2\"\n",
     "        kelly = \"/Users/kelly/Desktop/ds3500/DS3500-Final-Project\"\n",
     "        qi = \"\"\n",
-    "        self.path = emily + \"/transcripts/\"+ticker+\"_transcripts/\"\n",
+    "        self.path = xinyu + \"/transcripts/\"+ticker+\"_transcripts/\"\n",
     "\n",
     "    def read_files(self):\n",
     "        return [f for f in listdir(self.path) if isfile(join(self.path, f))]\n",
@@ -81,25 +81,25 @@
      "output_type": "stream",
      "text": [
       "Warning: attempted to access market during weekend or after hours\n",
-      "                          Earnings Transcript /Users/emilywang/Desktop/DS3500-Final-Project-main-2/transcripts/AAPL_transcripts/20161025_Apple_Inc-_Earnings_Call_2016-10-25_FS000000002309526178.pdf Not Added\n",
+      "                          Earnings Transcript /Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project/transcripts/AAPL_transcripts/20161025_Apple_Inc-_Earnings_Call_2016-10-25_FS000000002309526178.pdf Not Added\n",
       "                          \n",
       "Warning: attempted to access market during weekend or after hours\n",
-      "                          Earnings Transcript /Users/emilywang/Desktop/DS3500-Final-Project-main-2/transcripts/AAPL_transcripts/20161025_Apple_Inc-_Earnings_Call_2016-10-25_FS000000002309526172.pdf Not Added\n",
+      "                          Earnings Transcript /Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project/transcripts/AAPL_transcripts/20161025_Apple_Inc-_Earnings_Call_2016-10-25_FS000000002309526172.pdf Not Added\n",
       "                          \n",
       "AAPL transcripts stored successfully\n",
       "ADBE transcripts stored successfully\n",
       "Warning: attempted to access market during weekend or after hours\n",
-      "                          Earnings Transcript /Users/emilywang/Desktop/DS3500-Final-Project-main-2/transcripts/AMZN_transcripts/20190426_Amazon.com_Inc-_Earnings_Call_2019-4-25_DN000000002663104261.pdf Not Added\n",
+      "                          Earnings Transcript /Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project/transcripts/AMZN_transcripts/20190426_Amazon.com_Inc-_Earnings_Call_2019-4-25_DN000000002663104261.pdf Not Added\n",
       "                          \n",
       "AMZN transcripts stored successfully\n",
       "ASML transcripts stored successfully\n",
       "AVGO transcripts stored successfully\n",
       "CMCSA transcripts stored successfully\n",
       "Warning: attempted to access market during weekend or after hours\n",
-      "                          Earnings Transcript /Users/emilywang/Desktop/DS3500-Final-Project-main-2/transcripts/COST_transcripts/20170303_COSTCO_WHOLESALE-_Earnings_Call_2017-3-2_FS000000002333920108.pdf Not Added\n",
+      "                          Earnings Transcript /Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project/transcripts/COST_transcripts/20170303_COSTCO_WHOLESALE-_Earnings_Call_2017-3-2_FS000000002333920108.pdf Not Added\n",
       "                          \n",
       "Warning: attempted to access market during weekend or after hours\n",
-      "                          Earnings Transcript /Users/emilywang/Desktop/DS3500-Final-Project-main-2/transcripts/COST_transcripts/20170303_COSTCO_WHOLESALE-_Earnings_Call_2017-3-2_FS000000002333920096.pdf Not Added\n",
+      "                          Earnings Transcript /Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project/transcripts/COST_transcripts/20170303_COSTCO_WHOLESALE-_Earnings_Call_2017-3-2_FS000000002333920096.pdf Not Added\n",
       "                          \n",
       "COST transcripts stored successfully\n",
       "CSCO transcripts stored successfully\n",
@@ -108,33 +108,33 @@
       "INTC transcripts stored successfully\n",
       "MSFT transcripts stored successfully\n",
       "Warning: attempted to access market during weekend or after hours\n",
-      "                          Earnings Transcript /Users/emilywang/Desktop/DS3500-Final-Project-main-2/transcripts/NFLX_transcripts/20190118_Netflix_Inc-_Earnings_Call_2019-1-17_DN000000002573718691.pdf Not Added\n",
+      "                          Earnings Transcript /Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project/transcripts/NFLX_transcripts/20190118_Netflix_Inc-_Earnings_Call_2019-1-17_DN000000002573718691.pdf Not Added\n",
       "                          \n",
       "NFLX transcripts stored successfully\n",
       "NVDA transcripts stored successfully\n",
       "Warning: attempted to access market during weekend or after hours\n",
-      "                          Earnings Transcript /Users/emilywang/Desktop/DS3500-Final-Project-main-2/transcripts/PDD_transcripts/20200522_Pinduoduo_Inc-_Earnings_Call_2020-5-22_DN000000002842636277.pdf Not Added\n",
+      "                          Earnings Transcript /Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project/transcripts/PDD_transcripts/20200522_Pinduoduo_Inc-_Earnings_Call_2020-5-22_DN000000002842636277.pdf Not Added\n",
       "                          \n",
       "Warning: attempted to access market during weekend or after hours\n",
-      "                          Earnings Transcript /Users/emilywang/Desktop/DS3500-Final-Project-main-2/transcripts/PDD_transcripts/20200821_Pinduoduo_Inc-_Earnings_Call_2020-8-21_DN000000002890027659.pdf Not Added\n",
+      "                          Earnings Transcript /Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project/transcripts/PDD_transcripts/20200821_Pinduoduo_Inc-_Earnings_Call_2020-8-21_DN000000002890027659.pdf Not Added\n",
       "                          \n",
       "Warning: attempted to access market during weekend or after hours\n",
-      "                          Earnings Transcript /Users/emilywang/Desktop/DS3500-Final-Project-main-2/transcripts/PDD_transcripts/20211126_Pinduoduo_Inc-_Earnings_Call_2021-11-26_RT000000002968946789.pdf Not Added\n",
+      "                          Earnings Transcript /Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project/transcripts/PDD_transcripts/20211126_Pinduoduo_Inc-_Earnings_Call_2021-11-26_RT000000002968946789.pdf Not Added\n",
       "                          \n",
       "Warning: attempted to access market during weekend or after hours\n",
-      "                          Earnings Transcript /Users/emilywang/Desktop/DS3500-Final-Project-main-2/transcripts/PDD_transcripts/20180831_Pinduoduo_Inc-_Earnings_Call_2018-8-30_FS000000002463232018.pdf Not Added\n",
+      "                          Earnings Transcript /Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project/transcripts/PDD_transcripts/20180831_Pinduoduo_Inc-_Earnings_Call_2018-8-30_FS000000002463232018.pdf Not Added\n",
       "                          \n",
       "PDD transcripts stored successfully\n",
       "Warning: attempted to access market during weekend or after hours\n",
-      "                          Earnings Transcript /Users/emilywang/Desktop/DS3500-Final-Project-main-2/transcripts/PEP_transcripts/20190215_PepsiCo_Inc-_Earnings_Call_2019-2-15_FS000000002586060820.pdf Not Added\n",
+      "                          Earnings Transcript /Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project/transcripts/PEP_transcripts/20190215_PepsiCo_Inc-_Earnings_Call_2019-2-15_FS000000002586060820.pdf Not Added\n",
       "                          \n",
       "Warning: attempted to access market during weekend or after hours\n",
-      "                          Earnings Transcript /Users/emilywang/Desktop/DS3500-Final-Project-main-2/transcripts/PEP_transcripts/20190215_PepsiCo_Inc-_Earnings_Call_2019-2-15_FS000000002586060802.pdf Not Added\n",
+      "                          Earnings Transcript /Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project/transcripts/PEP_transcripts/20190215_PepsiCo_Inc-_Earnings_Call_2019-2-15_FS000000002586060802.pdf Not Added\n",
       "                          \n",
       "PEP transcripts stored successfully\n",
       "PYPL transcripts stored successfully\n",
       "Warning: attempted to access market during weekend or after hours\n",
-      "                          Earnings Transcript /Users/emilywang/Desktop/DS3500-Final-Project-main-2/transcripts/TMUS_transcripts/20190726_T_Mobile_US_Inc-_Earnings_Call_2019-7-26_DN000000002676607927.pdf Not Added\n",
+      "                          Earnings Transcript /Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project/transcripts/TMUS_transcripts/20190726_T_Mobile_US_Inc-_Earnings_Call_2019-7-26_DN000000002676607927.pdf Not Added\n",
       "                          \n",
       "TMUS transcripts stored successfully\n",
       "TSLA transcripts stored successfully\n",
@@ -151,12 +151,12 @@
     "\n",
     "\n",
     "database = Database()\n",
-    "db = database.store_data(tickers)\n"
+    "db = database.store_data(tickers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
