Changes to Jupyter Notebook

--- a/models_visualizations_demo.ipynb
+++ b/models_visualizations_demo.ipynb
@@ -139,11 +139,13 @@
     "    \n",
     "class Database:\n",
     "    def __init__(self):\n",
+    "    \"\"\" Establish mongoclient connection and create transcript database\"\"\"\n",
     "        client = MongoClient()\n",
     "        client.drop_database('transcripts')\n",
     "        self.db = client.transcripts\n",
     "\n",
     "    def store_data(self, tickers_lst):\n",
+    "    \"\"\" Store transcript data for each ticker into mongodb database\"\"\"\n",
     "        for t in tickers_lst:\n",
     "            store = Transcripts(t)\n",
     "            transcript = store.create_dct()\n",
