--- a/models_visualizations_demo.ipynb
+++ b/models_visualizations_demo.ipynb
@@ -3408,6 +3408,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create barchart showing text cleaning lengths by company\n",
+    "\n",
+    "def length_for_each_company(tikers_list):\n",
+    "    '''Return a dataframe that shows the total length of transcripts from each company before and after being cleaned'''\n",
+    "    #create a dictionary to store data\n",
+    "    clean_dict = {'Company':[], 'total_length_before_clean':[], 'total_length_after_clean':[]}\n",
+    "    #load each company\n",
+    "    for t in tickers:\n",
+    "        clean_dict['Company'].append(t)\n",
+    "        path = \"/Users/xinyuwu/Desktop/fall21/ds3500/DS3500-Final-Project\" + \"/transcripts/\"+t+\"_transcripts/\"\n",
+    "        total_length_before_clean = 0\n",
+    "        total_length_after_clean = 0\n",
+    "        lst_files = [f for f in listdir(path) if isfile(join(path, f))]\n",
+    "        for file in lst_files:\n",
+    "                file_path = path + file\n",
+    "                # load each transcript\n",
+    "                if file_path[-3:] == 'pdf':\n",
+    "                    clean = PdfCleaner(file_path)\n",
+    "                    # add the length of each transcrip into the total length\n",
+    "                    total_length_before_clean += clean.lenBeforeClean()\n",
+    "                    cleaned_text = clean.clean_stopwords_punctuation()\n",
+    "                    total_length_after_clean += clean.lenAfterClean()\n",
+    "\n",
+    "        clean_dict['total_length_before_clean'].append(total_length_before_clean)\n",
+    "        clean_dict['total_length_after_clean'].append(total_length_after_clean)\n",
+    "    #convert the dictionary to a dataframe\n",
+    "    df = pd.DataFrame(clean_dict)\n",
+    "    # sort the dataframe by the total length of transcripts that have been cleaned\n",
+    "    df = df.sort_values(by=['total_length_after_clean'])\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def barchart_length_Of_Transcripts(df):\n",
+    "    df.plot(x=\"Company\", y=[\"total_length_before_clean\", \"total_length_after_clean\"], kind=\"bar\",figsize=(20,10), fontsize=18)\n",
+    "    index_ = df.index\n",
+    "    num_company = len(index_)\n",
+    "    plt.title(\"Length of all transcripts from Nasdaq Top \"+ num_company+\" compnaies (10^6)\",fontsize=23, fontweight ='bold')\n",
+    "    plt.xlabel('Company', fontsize=20, fontweight ='bold')\n",
+    "    plt.ylabel('Total Length of all transcripts (10^6)', fontsize=20, fontweight ='bold')\n",
+    "    plt.legend([\"Total length of all transcripts BEFORE cleaning\", \"Total length of all transcripts AFTER cleaning\"],fontsize=17);\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "#get a df showing the length of transcripts from each company\n",
+    "df_transcripts = length_for_each_company(tickers)\n",
+    "#call visulization function\n",
+    "barchart_length_Of_Transcripts(df_transcripts)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
    "outputs": [],
